--- a/raspibear/app/templates/base.html
+++ b/raspibear/app/templates/base.html
@@ -21,7 +21,7 @@
 		<div data-role="navbar">
 		<ul>
 		    <li><a href={{ url_for("jukebox.show")|tojson }}>Jukebox!</a></li>
-		    <li><a href={{ url_for("camcontrol.show")|tojson }}>Teddycam!</a></li>
+		    <li><a href={{ url_for("webcam.show")|tojson }}>Teddycam!</a></li>
 		</ul>
 		</div>
 	</div>
