--- a/raspibear/app/webcamapp/templates/webcam.html
+++ b/raspibear/app/webcamapp/templates/webcam.html
@@ -13,8 +13,8 @@
 <div data-role="content">
 	<div>
 	<select id="onOffSwitch" data-role="flipswitch">
-      <option value="off">Off</option>
-      <option value="on">On</option>
+      <option value="false">Off</option>
+      <option value="true">On</option>
     </select>
     <select name="resolutionSelect" id="resolutionSelect" data-mini="true" data-inline="true">
 	  <option value="640x480">640x480</option>
